2017-09-01  Keith Marshall  <keith@users.osdn.me>

	Increment version for first OSDN hosted release.

	* VERSION.m4 (VERSION_PATCH): Increment to 3; thus...
	(__VERSION__): ...this is auto-incremented to 0.6.3

2013-11-26  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Conflate name and class columns in GUI package list.

	* src/pkglist.cpp (AppWindowMaker::InitPackageListView): Remove...
	<ID_PKGTYPE_COLUMN_HEADING>: ...column with this heading; add its width
	allocation to the original pixel count alloted for the width of...
	<ID_PKGNAME_COLUMN_HEADING>: ...this column.
	(pkgListViewMaker::UpdateItem): Conflate content of original name and
	class columns into first column; renumber successive columns.

2013-10-18  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Don't attempt to resolve dependencies for unidentified packages.

	* src/pkgdeps.cpp (pkgXmlDocument::ResolveDependencies):
	[selected == NULL]: Current dependency is unresolved; do not make any
	recursive call for this unidentified requirement.  This avoids posting
	misleading "can't get 'tarname' for non-release element <<<unknown>>>"
	diagnostic messages, where the subsequent "unresolved dependency"
	message is sufficient; include dmhmsgs.h, and add...
	(PKGMSG_SPECIFICATION_ERROR): ...this preamble instead.

2013-10-18  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Implement foundation for future NLS enabled diagnostics.

	* src/dmhmsgs.h: New file; it declares the NLS capable DMH interface.
	* src/dmhmsgs.c: New file; it implements rudimentary NLS hooks, (but
	currently does not direct them to any NLS provider), together with an
	initial subset of a default (compiled in) message catalogue.

	* Makefile.in (CORE_DLL_OBJECTS): Add dmhmsgs.$OBJEXT

	* src/pkgname.cpp (pkgArchiveName): Modify diagnostics, to use...
	(PKGMSG_SPECIFICATION_ERROR): ...this dmhmsgs.h declared message.

2013-10-15  Keith Marshall  <keithmarshall@users.sourceforge.net>
